--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-safe-area-context": "^4.6.4",
-    "react-native-screens": "^3.22.0"
+    "react-native-screens": "^3.22.0",
+    "react-native-video": "^5.2.1",
+    "react-native-video-controls": "^2.8.1",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
